@@ -7,30 +7,31 @@
  */
 package org.opendaylight.yangtools.yang.model.ri.type;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.hamcrest.CoreMatchers.containsString;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.opendaylight.yangtools.yang.model.api.Status;
 import org.opendaylight.yangtools.yang.model.api.type.EmptyTypeDefinition;
 import org.opendaylight.yangtools.yang.model.api.type.TypeDefinitions;
 
-public class EmptyTypeTest {
+class EmptyTypeTest {
     @Test
-    public void canCreateEmptyType() {
+    void canCreateEmptyType() {
         EmptyTypeDefinition emptyType = BaseTypes.emptyType();
 
-        assertEquals("QName", TypeDefinitions.EMPTY, emptyType.getQName());
-        assertEquals("BaseType", null, emptyType.getBaseType());
-        assertEquals("DefaultValue", Optional.empty(), emptyType.getDefaultValue());
-        assertEquals("Status", Status.CURRENT, emptyType.getStatus());
-        assertFalse(emptyType.getReference().isPresent());
-        assertEquals("Units", Optional.empty(), emptyType.getUnits());
-        assertFalse(emptyType.getDescription().isPresent());
-        assertEquals("UnknownSchemaNodes", Collections.emptyList(), emptyType.getUnknownSchemaNodes());
-        assertTrue("toString", emptyType.toString().contains("empty"));
+        assertEquals(TypeDefinitions.EMPTY, emptyType.getQName(), "QName");
+        assertNull(emptyType.getBaseType(), "BaseType");
+        assertEquals(Optional.empty(), emptyType.getDefaultValue(), "DefaultValue");
+        assertEquals(Status.CURRENT, emptyType.getStatus(), "Status");
+        assertEquals(Optional.empty(), emptyType.getReference());
+        assertEquals(Optional.empty(), emptyType.getUnits(), "Units");
+        assertEquals(Optional.empty(), emptyType.getDescription());
+        assertEquals(List.of(), emptyType.getUnknownSchemaNodes(), "UnknownSchemaNodes");
+        assertThat(emptyType.toString(), containsString("name=(urn:ietf:params:xml:ns:yang:1)empty"));
     }
 }
